[gd_scene load_steps=3 format=3 uid="uid://cxpwswu4324r6"]

[ext_resource type="Script" path="res://network_manager/network_area.gd" id="1_kgfwp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3vwmr"]
resource_local_to_scene = true

[node name="NetworkArea" type="Area2D"]
collision_layer = 8
collision_mask = 8
monitorable = false
script = ExtResource("1_kgfwp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3vwmr")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
